# Kolam-Ikan

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
api/: cron.ts
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  database.rs  lib.rs  main.rs  models.rs
src/components/Auth/: AuthView.tsx
src/components/Branch/: BranchGraph.tsx  FullscreenBranchGraph.tsx  SidebarBranchGraph.tsx  index.ts  utils.ts
src/components/Editor/SlashCommand/: CommandList.tsx  index.ts  suggestions.tsx
src/components/Editor/components/: ColorHighlightPopover.tsx  HeadingDropdown.tsx  LinkPopover.tsx  ListDropdown.tsx  TextAlignButtons.tsx  index.ts
src/components/Layout/: MainView.tsx  RightPanel.tsx  Sidebar.tsx
src/components/Profile/: CreateProfileDialog.tsx  ManageProfilesDialog.tsx  ProfileBadge.tsx  ProfileFormDialog.tsx  ProfilePicker.tsx  index.ts
src/components/Stream/: BulkActionBar.tsx  CommitDialog.tsx  ConfirmDeleteDialog.tsx  EditorToolbar.tsx  EntryBlock.tsx  VersionHistoryDialog.tsx
src/components/ui/: checkbox.tsx  context-menu.tsx  dropdown-menu.tsx  popover.tsx  textarea.tsx  toolbar.tsx  tooltip.tsx
src/hooks/: useQueries.ts  useStreamRefetch.ts
src/lib/: constants.ts  devLogger.ts  utils.ts
src/services/: api.ts  bridge.ts
src/store/: appStore.ts
src/styles/: tiptap-editor.css
src/types/: index.ts
supabase/: migrations.sql
